--- a/index.html
+++ b/index.html
@@ -6,17 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Landing Page</title>
 
-
-
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
   <body>
     <header>
@@ -29,8 +20,8 @@
 
     </header>
 
-    <div id="para">
-      <p>The penny originates. Behind a delayed mortal bobs an acknowledged supporter. Will the beloved absorb another central excess? The vintage graduates. My moderate iron overcomes this rabbit.The penny originates. Behind a delayed mortal bobs an acknowledged supporter. Will the beloved absorb another central excess? The vintage graduates. My moderate iron overcomes this rabbit.</p>
+    <div id="butttons">
+      
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
