--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <a href="#button_area">
+      <a href="#button_area" onclick="buttons()">
       <div class="hook" onclick="buttons()">
         <h1>Hello!</h1>
         <h3>Its nice to finally meet you</h3>
