--- a/index.html
+++ b/index.html
@@ -14,10 +14,23 @@
       <div id="hook">
         <h1>Hello!</h1>
         <h3>Its nice to finally meet you</h3>
+
       </div>
     </a>
     </header>
 
+    <nav class="middle">
+      <ul>
+        <li><a href="#intro">Intro</a></li>
+        <li class="line">|</li>
+        <li><a href="#about">About</a></li>
+        <li class="line">|</li>
+        <li><a href="#contact">Contact</a></li>
+        <!--<li><a href="#elements">Elements</a></li>-->
+      </ul>
+    </nav>
+
+    <!--
 
     <div id="buttonArea">
       <div id="inside_button">
@@ -26,6 +39,8 @@
         <button id="button" onclick="buttons()">Contact</button>
       </div>
     </div>
+
+  -->
 
     <div id="about">
       <header id="header2">
