--- a/index.html
+++ b/index.html
@@ -21,26 +21,14 @@
 
     <nav class="middle">
       <ul>
-        <li><a href="#intro">Intro</a></li>
+        <li><a href="#intro" onclick="buttons()">Intro</a></li>
         <li class="line">|</li>
-        <li><a href="#about">About</a></li>
+        <li><a href="#about" onclick="buttons()">About</a></li>
         <li class="line">|</li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#contact" onclick="buttons()">Contact</a></li>
         <!--<li><a href="#elements">Elements</a></li>-->
       </ul>
     </nav>
-
-    <!--
-
-    <div id="buttonArea">
-      <div id="inside_button">
-        <button id="button" onclick="buttons()">About</button>
-        <button id="button" onclick="buttons()">My Work</button>
-        <button id="button" onclick="buttons()">Contact</button>
-      </div>
-    </div>
-
-  -->
 
     <div id="about">
       <header id="header2">
@@ -49,6 +37,6 @@
     </header>
     </div>
 
-    <script src="buttons.js"></script>
+  <script src="buttons.js"></script>
   </body>
 </html>
