--- a/index.html
+++ b/index.html
@@ -10,32 +10,25 @@
   </head>
   <body>
     <header id="header1">
-      <a href="#buttonArea">
+
       <div id="hook">
         <h1>Hello!</h1>
-        <h3>Its nice to finally meet you</h3>
+        <h3>Its nice to finally meet you.</h3>
 
       </div>
-    </a>
+
     </header>
 
     <nav class="middle">
       <ul>
-        <li><a href="#intro" onclick="buttons()">Intro</a></li>
+        <li><a href="#intro" onclick="Intro()">Intro</a></li>
         <li class="line">|</li>
-        <li><a href="#about" onclick="buttons()">About</a></li>
+        <li><a href="#about" onclick="about()">About</a></li>
         <li class="line">|</li>
-        <li><a href="#contact" onclick="buttons()">Contact</a></li>
+        <li><a href="#contact" onclick="Contact()">Contact</a></li>
         <!--<li><a href="#elements">Elements</a></li>-->
       </ul>
     </nav>
-
-    <div id="about">
-      <header id="header2">
-      <h1>Farhan Chandel</h1>
-      <h3> Software Systems Major</h3>
-    </header>
-    </div>
 
   <script src="buttons.js"></script>
   </body>
