--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@
 
   </head>
   <body>
+    <div id="myModal" class="modal">
+      <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
+      <img class="modal-content" id="img01">
+    </div>
     <header id="header1">
-
       <div id="hook">
+
         <h1>Hello!</h1>
         <h3>Its nice to finally meet you.</h3>
 
       </div>
 
+
     </header>
 
     <nav class="middle">
       <ul>
-        <li><a href="#intro" onclick="Intro()">Intro</a></li>
+        <li><a href="#intro" onclick="Portfo()">Portfolio</a></li>
         <li class="line">|</li>
         <li><a href="#about" onclick="about()">About</a></li>
         <li class="line">|</li>
